test/good/arrays/empty04.px

x: Char*[[Bool]] = ('x', [])
print x.a, x.b
