test/bad/classes/struct12.px

class Test def
    Bool b
    Char c: '-'

Test(c='.')
